# Brot

./: .gitignore  CMakeLists.txt  ycm_extra_conf.py.in
include/: INCLUDE_INFO.txt
src/: Brot.cpp  Brot.hpp.in  CMakeLists.txt  Material.cpp  Material.hpp  Scene.cpp  Scene.hpp  Tracer.cpp  Tracer.hpp  Tri.hpp
